target/D95Parser.py
# Generated from main/d95/parser/D95.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D95Parser ( Parser ):

    grammarFileName = "D95.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'+.'", "'==.'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'=>'", "'('", 
                     "')'", "'['", "']'", "':'", "','", "';'", "'{'", "'}'", 
                     "<INVALID>", "<INVALID>", "'.'" ]

    symbolicNames = [ "<INVALID>", "RETURN", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "WHILE", "FOREACH", "AS", "FUNCTION", 
                      "ARRAY", "DEFINE", "ASSIGN", "CONCATSTR", "COMPSTR", 
                      "ADD", "MINUS", "MUL", "DIV", "MOD", "NOT", "AND", 
                      "OR", "EQ", "NEQ", "GT", "LT", "GTE", "LTE", "ASSO", 
                      "LP", "RP", "LSB", "RSB", "COLON", "COMMA", "SEMI", 
                      "LCB", "RCB", "INTLIT", "FLOATLIT", "DOT", "BOOLEAN", 
                      "STRINGLIT", "BLOCKCOMMENT", "VAR_NAME", "FUNCTION_NAME", 
                      "CONSTANT_NAME", "WS", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_var_declare = 1
    RULE_const_declare = 2
    RULE_func_declare = 3
    RULE_stmt = 4
    RULE_assign_stmt = 5
    RULE_assign_lhs = 6
    RULE_if_stmt = 7
    RULE_elif_part = 8
    RULE_else_part = 9
    RULE_foreach_stmt = 10
    RULE_while_stmt = 11
    RULE_break_stmt = 12
    RULE_continue_stmt = 13
    RULE_call_stmt = 14
    RULE_return_stmt = 15
    RULE_exp = 16
    RULE_exp1 = 17
    RULE_exp2 = 18
    RULE_exp3 = 19
    RULE_exp4 = 20
    RULE_exp5 = 21
    RULE_exp6 = 22
    RULE_exp7 = 23
    RULE_exp8 = 24
    RULE_exp9 = 25
    RULE_exp10 = 26
    RULE_operands = 27
    RULE_func_call = 28
    RULE_func_params = 29
    RULE_index_exp = 30
    RULE_index_opr = 31
    RULE_params = 32
    RULE_body = 33
    RULE_literal = 34
    RULE_identifier = 35
    RULE_primitive_lit = 36
    RULE_array_lit = 37
    RULE_index_arr = 38
    RULE_index_arr_body = 39
    RULE_asso_arr = 40
    RULE_asso_ele = 41
    RULE_multidim_arr = 42
    RULE_multidim_arr_ele = 43
    RULE_asso_key = 44
    RULE_fe_id = 45

    ruleNames =  [ "program", "var_declare", "const_declare", "func_declare", 
                   "stmt", "assign_stmt", "assign_lhs", "if_stmt", "elif_part", 
                   "else_part", "foreach_stmt", "while_stmt", "break_stmt", 
                   "continue_stmt", "call_stmt", "return_stmt", "exp", "exp1", 
                   "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", "exp8", 
                   "exp9", "exp10", "operands", "func_call", "func_params", 
                   "index_exp", "index_opr", "params", "body", "literal", 
                   "identifier", "primitive_lit", "array_lit", "index_arr", 
                   "index_arr_body", "asso_arr", "asso_ele", "multidim_arr", 
                   "multidim_arr_ele", "asso_key", "fe_id" ]

    EOF = Token.EOF
    RETURN=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELSEIF=5
    ELSE=6
    WHILE=7
    FOREACH=8
    AS=9
    FUNCTION=10
    ARRAY=11
    DEFINE=12
    ASSIGN=13
    CONCATSTR=14
    COMPSTR=15
    ADD=16
    MINUS=17
    MUL=18
    DIV=19
    MOD=20
    NOT=21
    AND=22
    OR=23
    EQ=24
    NEQ=25
    GT=26
    LT=27
    GTE=28
    LTE=29
    ASSO=30
    LP=31
    RP=32
    LSB=33
    RSB=34
    COLON=35
    COMMA=36
    SEMI=37
    LCB=38
    RCB=39
    INTLIT=40
    FLOATLIT=41
    DOT=42
    BOOLEAN=43
    STRINGLIT=44
    BLOCKCOMMENT=45
    VAR_NAME=46
    FUNCTION_NAME=47
    CONSTANT_NAME=48
    WS=49
    ILLEGAL_ESCAPE=50
    UNCLOSE_STRING=51
    UNTERMINATED_COMMENT=52
    ERROR_CHAR=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D95Parser.EOF, 0)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.Var_declareContext)
            else:
                return self.getTypedRuleContext(D95Parser.Var_declareContext,i)


        def const_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.Const_declareContext)
            else:
                return self.getTypedRuleContext(D95Parser.Const_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.Func_declareContext)
            else:
                return self.getTypedRuleContext(D95Parser.Func_declareContext,i)


        def getRuleIndex(self):
            return D95Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D95Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 95
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [D95Parser.VAR_NAME, D95Parser.FUNCTION_NAME, D95Parser.CONSTANT_NAME]:
                    self.state = 92
                    self.var_declare()
                    pass
                elif token in [D95Parser.DEFINE]:
                    self.state = 93
                    self.const_declare()
                    pass
                elif token in [D95Parser.FUNCTION]:
                    self.state = 94
                    self.func_declare()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D95Parser.FUNCTION) | (1 << D95Parser.DEFINE) | (1 << D95Parser.VAR_NAME) | (1 << D95Parser.FUNCTION_NAME) | (1 << D95Parser.CONSTANT_NAME))) != 0)):
                    break

            self.state = 99
            self.match(D95Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_lhs(self):
            return self.getTypedRuleContext(D95Parser.Assign_lhsContext,0)


        def ASSIGN(self):
            return self.getToken(D95Parser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(D95Parser.ExpContext,0)


        def SEMI(self):
            return self.getToken(D95Parser.SEMI, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = D95Parser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.assign_lhs()
            self.state = 102
            self.match(D95Parser.ASSIGN)
            self.state = 103
            self.exp()
            self.state = 104
            self.match(D95Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(D95Parser.DEFINE, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def CONSTANT_NAME(self):
            return self.getToken(D95Parser.CONSTANT_NAME, 0)

        def COMMA(self):
            return self.getToken(D95Parser.COMMA, 0)

        def exp(self):
            return self.getTypedRuleContext(D95Parser.ExpContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def SEMI(self):
            return self.getToken(D95Parser.SEMI, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_const_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_declare" ):
                return visitor.visitConst_declare(self)
            else:
                return visitor.visitChildren(self)




    def const_declare(self):

        localctx = D95Parser.Const_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_const_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(D95Parser.DEFINE)
            self.state = 107
            self.match(D95Parser.LP)
            self.state = 108
            self.match(D95Parser.CONSTANT_NAME)
            self.state = 109
            self.match(D95Parser.COMMA)
            self.state = 110
            self.exp()
            self.state = 111
            self.match(D95Parser.RP)
            self.state = 112
            self.match(D95Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(D95Parser.FUNCTION, 0)

        def FUNCTION_NAME(self):
            return self.getToken(D95Parser.FUNCTION_NAME, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def params(self):
            return self.getTypedRuleContext(D95Parser.ParamsContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def LCB(self):
            return self.getToken(D95Parser.LCB, 0)

        def body(self):
            return self.getTypedRuleContext(D95Parser.BodyContext,0)


        def RCB(self):
            return self.getToken(D95Parser.RCB, 0)

        def getRuleIndex(self):
            return D95Parser.RULE_func_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declare" ):
                return visitor.visitFunc_declare(self)
            else:
                return visitor.visitChildren(self)




    def func_declare(self):

        localctx = D95Parser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(D95Parser.FUNCTION)
            self.state = 115
            self.match(D95Parser.FUNCTION_NAME)
            self.state = 116
            self.match(D95Parser.LP)
            self.state = 117
            self.params()
            self.state = 118
            self.match(D95Parser.RP)
            self.state = 119
            self.match(D95Parser.LCB)
            self.state = 120
            self.body()
            self.state = 121
            self.match(D95Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(D95Parser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(D95Parser.If_stmtContext,0)


        def foreach_stmt(self):
            return self.getTypedRuleContext(D95Parser.Foreach_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(D95Parser.While_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(D95Parser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(D95Parser.Continue_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(D95Parser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(D95Parser.Return_stmtContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = D95Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.if_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.foreach_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 126
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 127
                self.break_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 128
                self.continue_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 129
                self.call_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 130
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(D95Parser.Var_declareContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_assign_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = D95Parser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.var_declare()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_lhsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_NAME(self):
            return self.getToken(D95Parser.VAR_NAME, 0)

        def CONSTANT_NAME(self):
            return self.getToken(D95Parser.CONSTANT_NAME, 0)

        def index_opr(self):
            return self.getTypedRuleContext(D95Parser.Index_oprContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_assign_lhs

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_lhs" ):
                return visitor.visitAssign_lhs(self)
            else:
                return visitor.visitChildren(self)




    def assign_lhs(self):

        localctx = D95Parser.Assign_lhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign_lhs)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(D95Parser.VAR_NAME)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(D95Parser.CONSTANT_NAME)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.index_opr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(D95Parser.IF, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def exp(self):
            return self.getTypedRuleContext(D95Parser.ExpContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def LCB(self):
            return self.getToken(D95Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D95Parser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.StmtContext)
            else:
                return self.getTypedRuleContext(D95Parser.StmtContext,i)


        def elif_part(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.Elif_partContext)
            else:
                return self.getTypedRuleContext(D95Parser.Elif_partContext,i)


        def else_part(self):
            return self.getTypedRuleContext(D95Parser.Else_partContext,0)


        def getRuleIndex(self):
            return D95Parser.RULE_if_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = D95Parser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(D95Parser.IF)
            self.state = 141
            self.match(D95Parser.LP)
            self.state = 142
            self.exp()
            self.state = 143
            self.match(D95Parser.RP)
            self.state = 144
            self.match(D95Parser.LCB)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D95Parser.RETURN) | (1 << D95Parser.BREAK) | (1 << D95Parser.CONTINUE) | (1 << D95Parser.IF) | (1 << D95Parser.WHILE) | (1 << D95Parser.FOREACH) | (1 << D95Parser.VAR_NAME) | (1 << D95Parser.FUNCTION_NAME) | (1 << D95Parser.CONSTANT_NAME))) != 0):
                self.state = 145
                self.stmt()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(D95Parser.RCB)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D95Parser.ELSEIF:
                self.state = 152
                self.elif_part()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D95Parser.ELSE:
                self.state = 158
                self.else_part()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elif_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(D95Parser.ELSEIF, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)

        def exp(self):
            return self.getTypedRuleContext(D95Parser.ExpContext,0)


        def RP(self):
            return self.getToken(D95Parser.RP, 0)

        def LCB(self):
            return self.getToken(D95Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D95Parser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.StmtContext)
            else:
                return self.getTypedRuleContext(D95Parser.StmtContext,i)


        def getRuleIndex(self):
            return D95Parser.RULE_elif_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElif_part" ):
                return visitor.visitElif_part(self)
            else:
                return visitor.visitChildren(self)




    def elif_part(self):

        localctx = D95Parser.Elif_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_elif_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(D95Parser.ELSEIF)
            self.state = 162
            self.match(D95Parser.LP)
            self.state = 163
            self.exp()
            self.state = 164
            self.match(D95Parser.RP)
            self.state = 165
            self.match(D95Parser.LCB)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D95Parser.RETURN) | (1 << D95Parser.BREAK) | (1 << D95Parser.CONTINUE) | (1 << D95Parser.IF) | (1 << D95Parser.WHILE) | (1 << D95Parser.FOREACH) | (1 << D95Parser.VAR_NAME) | (1 << D95Parser.FUNCTION_NAME) | (1 << D95Parser.CONSTANT_NAME))) != 0):
                self.state = 166
                self.stmt()
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(D95Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(D95Parser.ELSE, 0)

        def LCB(self):
            return self.getToken(D95Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D95Parser.RCB, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D95Parser.StmtContext)
            else:
                return self.getTypedRuleContext(D95Parser.StmtContext,i)


        def getRuleIndex(self):
            return D95Parser.RULE_else_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_part" ):
                return visitor.visitElse_part(self)
            else:
                return visitor.visitChildren(self)




    def else_part(self):

        localctx = D95Parser.Else_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_else_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(D95Parser.ELSE)
            self.state = 175
            self.match(D95Parser.LCB)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D95Parser.RETURN) | (1 << D95Parser.BREAK) | (1 << D95Parser.CONTINUE) | (1 << D95Parser.IF) | (1 << D95Parser.WHILE) | (1 << D95Parser.FOREACH) | (1 << D95Parser.VAR_NAME) | (1 << D95Parser.FUNCTION_NAME) | (1 << D95Parser.CONSTANT_NAME))) != 0):
                self.state = 176
                self.stmt()
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.match(D95Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Foreach_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOREACH(self):
            return self.getToken(D95Parser.FOREACH, 0)

        def LP(self):
            return self.getToken(D95Parser.LP, 0)
